--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sempro/phpunit-pretty-print",
+    "name": "tigron/phpunit-pretty-print",
     "version": "1.2.2",
     "description": "Prettify PHPUnit output",
     "type": "library",
@@ -8,7 +8,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.1.0",
-        "phpunit/phpunit": ">=7.0.0 <9.0.0"
+        "phpunit/phpunit": ">9.0.0"
     },
     "autoload": {
         "psr-4": {
